[package]
name = "grounded"
version = "0.1.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jamesmunns/grounded"
description = "A toolkit for managing unsafe statics"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/grounded/"


[dependencies]
